tests/ui/crate_local_distributed_slice/exact_length.stderr
error: expected this length to be `_`
  --> $DIR/exact_length.rs:4:21
   |
LL | const MEOWS: [&str; 10];
   |                     ^^
   |
   = note: the length of a distributed slice is determined by the added elements throughout the crate
help: "replace the length with `_`"
   |
LL - const MEOWS: [&str; 10];
LL + const MEOWS: [&str; _];
   |

error: aborting due to 1 previous error

